--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   #STYLE
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
+  video_player: ^2.4.5
 
   #DATA
   shared_preferences: ^2.0.13
