--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -29,11 +29,19 @@ dependencies:
   fluttertoast: ^8.0.7
   table_calendar: ^3.0.6
 
+  flutter_launcher_icons:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/image/logo_app.png"
+  adaptive_icon_background: "assets/image/logo_app.png"
 
 flutter:
   uses-material-design: true
