--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
   video_player: ^2.4.5
+  animate_do: ^2.1.0
 
   #DATA
   shared_preferences: ^2.0.13
