--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,5 +48,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/image/
+    - assets/videos/
     - i18n/es.json
     - i18n/en.json
