--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="academybw"
+        android:label="Bridgewhat"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
