--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+11
+version: 1.0.0+12
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -41,8 +41,8 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/image/logo_app.png"
-  adaptive_icon_background: "assets/image/logo_app.png"
+  image_path: "assets/image/icon_app_install.png"
+  adaptive_icon_background: "assets/image/icon_app_install.png"
 
 flutter:
   uses-material-design: true
