--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/image/icon_app_install.png"
-  adaptive_icon_background: "assets/image/icon_app_install.png"
+  image_path: "assets/image/icon_app.png"
+  adaptive_icon_background: "assets/image/icon_app.png"
 
 flutter:
   uses-material-design: true
