--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,14 @@ dependencies:
     sdk: flutter
 
   #STATE
-  provider: ^5.0.0
+  provider: ^6.0.1
 
   #STYLE
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
   video_player: ^2.4.5
+  flick_video_player: ^0.5.0
+  flutter_inappwebview: ^5.4.3+7
   animate_do: ^2.1.0
 
   #DATA
