--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+23
+version: 1.0.0+24
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -23,7 +23,7 @@ dependencies:
   video_player: ^2.4.5
   #flick_video_player: ^0.5.0
   cached_network_image: ^3.2.0
-  flutter_inappwebview: ^5.4.3+7
+  webview_flutter: ^3.0.4
   animate_do: ^2.1.0
 
   #DATA
@@ -32,6 +32,7 @@ dependencies:
   #UTILS
   fluttertoast: ^8.0.7
   table_calendar: ^3.0.6
+  url_launcher: ^6.1.5
 
   flutter_launcher_icons:
 
