--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+30
+version: 1.0.0+32
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -22,11 +22,13 @@ dependencies:
   google_fonts: ^2.0.0
   video_player: ^2.4.5
   cached_network_image: ^3.2.0
-  flick_video_player: ^0.5.0
   animate_do: ^2.1.0
 
   #DATA
   shared_preferences: ^2.0.13
+  path_provider: ^2.0.11
+  ffi: ^1.2.1
+  dio: ^4.0.6
 
   #UTILS
   fluttertoast: ^8.0.7
