--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   video_player: ^2.4.5
   cached_network_image: ^3.2.0
   animate_do: ^2.1.0
+  flutter_html: ^2.2.1
 
   #DATA
   shared_preferences: ^2.0.13
